--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-navigation": "^4.4.4",
+    "expo-checkbox": "~2.4.0",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
